<resources>
    <string name="app_name">Login page</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="turn_on_gps">Turn On GPS</string>
    <string name="zip_code_number">Zip Code Number</string>
    <string name="city_name">City Name</string>
    <string name="or">Or</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="contact">Contact</string>
    <string name="ailses">Ailses</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="enter">Enter</string>
</resources>
