<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="86dp"
        android:layout_height="27dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="513dp"
        android:gravity="center"
        android:text="@string/zip_code"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/city"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="86dp"
        android:gravity="center"
        android:text="@string/turn_on_gps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="158dp"
        android:layout_height="46dp"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/zip_code_number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:layout_marginBottom="184dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/city_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="86dp"
        android:layout_height="32dp"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:layout_marginBottom="262dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>