<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_help">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="513dp"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="@color/colorBlack"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="86dp"
        android:gravity="center"
        android:text="@string/contact"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>